traffic-management/request-routing/00-namespace-1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-1
  labels:
    istio-injection: enabled
