traffic-management/request-routing/app-1-00-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1
  namespace: namespace-1
spec:
  ports:
  - name: apache
    port: 80
    protocol: TCP
    targetPort: apache
  selector:
    app: app-1
