traffic-management/request-routing/app-1-01-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-1
  namespace: namespace-1
spec:
  host: app-1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
