traffic-management/request-routing/app-1-02-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-1
  namespace: namespace-1
spec:
  hosts:
    - app-1
  http:
  - route:
    - destination:
        host: app-1
        subset: v1
      weight: 90
    - destination:
        host: app-1
        subset: v2
      weight: 10
